ghc-4335c07/testsuite/tests/typecheck/should_fail/T12966.stderr

T12966.hs:4:39: error:
    • Expecting one more argument to ‘(~) (Maybe d)’
      Expected a type, but ‘(~) (Maybe d)’ has kind ‘* -> Constraint’
    • In the type ‘forall d. (c d) => ((~) (Maybe d))’
      In the type declaration for ‘Maybeify’
